entities modifieds and the refactor logic of the route 'newsale' of layer service and controller