@@ -1,15 +1,15 @@
 package com.leo.crud.vendas.service;
 
+import com.leo.crud.vendas.dto.requests.persistence.BankPersistenceRequestDTO;
+import com.leo.crud.vendas.dto.responses.persistence.BankPersistenceResponseDTO;
 import com.leo.crud.vendas.entities.Bank;
 import com.leo.crud.vendas.exceptions.ResourceNotFound;
 import com.leo.crud.vendas.repositories.BankRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class BankService {
@@ -17,45 +17,52 @@ public class BankService {
     @Autowired
     BankRepository bankRepository;
 
-    public BankDTO findById(Long id){
+    public BankPersistenceResponseDTO findById(Long id){
 
         Optional<Bank> existsId = bankRepository.findById(id);
 
         if(existsId.isPresent()){
 
-            return new BankDTO(existsId.get());
+            return new BankPersistenceResponseDTO(
+                    existsId.get().getExternalId(),
+                    existsId.get().getName(),
+                    existsId.get().getKeyPix(),
+                    existsId.get().getImgQrCode()
+            );
         }else {
 
             throw new ResourceNotFound("Id not found");
         }
     }
 
-    public BankDTO save(CreateBankDTO dto) {
+    public BankPersistenceResponseDTO save(BankPersistenceRequestDTO dto) {
 
-        try {
-            Bank bank = new Bank();
+        Bank bank = new Bank();
 
-            byte[] image = dto.getImageQrCode().getBytes();
+        bank.setName(dto.name());
+        bank.setKeyPix(dto.keyPix());
+        bank.setImgQrCode(dto.imgQrCode());
 
-            bank.setName(dto.getName());
-            bank.setKeyPix(dto.getKeyPix());
-            bank.setImgQrCode(image);
+        bank = bankRepository.save(bank);
 
-            bank = bankRepository.save(bank);
-
-            return new BankDTO(bank);
-        }catch (IOException e){
-            throw new RuntimeException("Erro de IO");
-        }
+        return new BankPersistenceResponseDTO(
+                bank.getExternalId(),
+                bank.getName(),
+                bank.getKeyPix(),
+                bank.getImgQrCode()
+        );
     }
 
-    public List<BankDTO> getAll(){
+    public List<BankPersistenceResponseDTO> getAll(){
         List<Bank> result = bankRepository.findAll();
 
-        List<BankDTO> bankDTOS = result.stream().map(BankDTO::new).collect(Collectors.toList());
+        List<BankPersistenceResponseDTO> banks = result.stream().map(bank -> new BankPersistenceResponseDTO(
+                bank.getExternalId(),
+                bank.getName(),
+                bank.getKeyPix(),
+                null
+        )).toList();
 
-        bankDTOS.forEach(b-> b.setImgQrCode(null));
-
-        return bankDTOS;
+        return banks;
     }
 }
